test/functions/ferguson/ref-pair/constArrayHalt.good
constArrayHalt.chpl:4: error: halt reached - 0 0 0 0 0 0 0 0 0 0
