test/functions/ferguson/ref-pair/constArrayHalt.chpl

proc main() {
  const A : [1..10] int;
  halt(A);
}
